<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.signup.SignUpView">

    <TextView
        android:id="@+id/signup_heading"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Signup Page"
        android:textColor="@color/orange"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <ImageView
        android:id="@+id/signup_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/signup_ln"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <LinearLayout
        android:id="@+id/signup_ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <EditText
            android:id="@+id/signUpEmailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signUpEmailField"
            android:inputType="textEmailAddress"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange" />

        <EditText
            android:id="@+id/signUpPasswordInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signUpPasswordField"
            android:inputType="textPassword"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange" />

        <EditText
            android:id="@+id/signUpPasswordInput2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signUpPassword2Field"
            android:inputType="textPassword"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/orange"
            android:text="@string/signUpButton"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>