<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        tools:context=".views.placemark.HillfortView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scaleType="fitStart">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/p_title"
                        android:layout_width="230dp"
                        android:layout_height="40dp"
                        android:hint="@string/hint_placemarkTitle"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="#E91E63"
                        android:textColorHint="#E91E63"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:padding="8dp"
                        android:text="@string/hint_lat"
                        android:textColor="#E91E63" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/p_description"
                        android:layout_width="230dp"
                        android:layout_height="40dp"
                        android:hint="@string/hint_placemarkDescription"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="#E91E63"
                        android:textColorHint="#E91E63"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/lng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:padding="8dp"
                        android:text="@string/hint_lng"
                        android:textColor="#E91E63" />

                </LinearLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true" />

                <!--            <Button-->
                <!--                android:id="@+id/placemarkLocation"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginVertical="8dp"-->
                <!--                android:background="@color/black"-->
                <!--                android:text="@string/button_location"-->
                <!--                android:textColor="@color/purple"-->
                <!--                android:textSize="16sp" />-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/note_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/note_content"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="start"
                    android:hint="Add Notes"
                    android:inputType="textMultiLine"
                    android:textColor="#E91E63"
                    android:textColorHint="#E91E63" />

                <Button
                    android:id="@+id/add_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="#E91E63"
                    android:text="ADD NOTE"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/p_visited"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="#E91E63"
                        android:text="@string/isVisited"
                        android:textColor="#E91E63"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/p_dateVisited"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:focusableInTouchMode="false"
                        android:hint="@string/dateVisited"
                        android:inputType="date"
                        android:textColor="#E91E63"
                        android:textColorHint="#E91E63"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/rate_score"
                        android:textColor="#E91E63"
                        android:textSize="18sp" />

                    <RatingBar
                        android:id="@+id/p_rating"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="1" />

                    <ToggleButton
                        android:id="@+id/p_fav"
                        style="@style/toggleButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_toggle_bg"
                        android:checked="false"
                        android:gravity="center|clip_vertical" />

                </LinearLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/p_img"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_img"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="#E91E63"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/add_img"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/remove_img"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="#E91E63"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/remove_img"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/p_share"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/ic_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/p_save"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ic_save" />
</androidx.constraintlayout.widget.ConstraintLayout>